# frappe-dev-mcp-server

./: .gitignore  EXAMPLES.md  INSTALLATION.md  README.md  SSE_FIX.md  STATUS.md  package.json  pyproject.toml  server.json  server.sh  test-mcp.js  test-schema.js  validate-mcp.js  validate-server.js
frappe_mcp/server/tests/: test_server.py
src/: index.ts
