[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frappe-dev-mcp-server"
description = "A Model Context Protocol (MCP) server that provides AI assistance for Frappe/ERPNext development"
authors = [
  { name = "SajmustafaKe", email = "your-email@example.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Werkzeug==3.1.3",
  "pydantic~=2.11.7",
  "jsonschema (>=4.24.0,<5.0.0)",
  "Click~=8.2.0",
]
dynamic = ["version"]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/SajmustafaKe/frappe-dev-mcp-server"
Documentation = "https://github.com/SajmustafaKe/frappe-dev-mcp-server"
Source = "https://github.com/SajmustafaKe/frappe-dev-mcp-server"

[project.scripts]
frappe-mcp = "frappe_mcp.cli:run"

[dependency-groups]
dev = ["pytest>=8.4.1", "ruff>=0.12.0"]

[tool.hatch.version]
path = "frappe_mcp/__init__.py"

[tool.pytest.ini_options]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88 # Same as Black.
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "RUF", # ruff-specific rules
  "FA",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"frappe_mcp/server/types.py" = ["N815", "UP007"]


[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
